[project]
name = "moltspay"
version = "0.2.0"
description = "Python SDK for MoltsPay - Agent-to-Agent Payments. LangChain compatible."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zen7 Labs", email = "zen7@moltspay.com"}
]
keywords = [
    "ai", "agent", "payments", "crypto", "usdc", "x402",
    "langchain", "langchain-tool", "llm", "gpt", "openai",
    "ai-agent", "autonomous-agent", "agentic", "web3",
    "blockchain", "base", "coinbase", "gasless"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
    "eth-account>=0.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
all = [
    "moltspay[langchain,dev]",
]

[project.urls]
Homepage = "https://moltspay.com"
Documentation = "https://moltspay.com/docs"
Repository = "https://github.com/Yaqing2023/moltspay-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moltspay"]
