[project]
name = "moltspay"
version = "0.6.1"
description = "Python SDK for MoltsPay - Agent-to-Agent Payments. LangChain compatible."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zen7 Labs", email = "support@zen7.com"}
]
keywords = [
    "ai", "agent", "payments", "crypto", "usdc", "usdt", "x402",
    "langchain", "langchain-tool", "crewai", "autogpt",
    "llm", "gpt", "openai", "ai-agent", "autonomous-agent",
    "agentic", "multi-agent", "web3", "blockchain", "base",
    "polygon", "multi-chain", "coinbase", "gasless"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
    "eth-account>=0.9",
    "pydantic>=2.0",
    "web3>=6.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1",
]
server = [
    "cdp-sdk>=1.0",
]
solana = [
    "solders>=0.20.0",
    "solana>=0.30.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
all = [
    "moltspay[langchain,solana,dev]",
]

[project.scripts]
moltspay = "moltspay.cli:main"
moltspay-server = "moltspay.server.__main__:main"

[project.urls]
Homepage = "https://moltspay.com"
Documentation = "https://moltspay.com/docs"
Repository = "https://github.com/Yaqing2023/moltspay-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moltspay"]
